--- a/website/.github/workflows/infrastructure/template.yaml
+++ b/website/.github/workflows/infrastructure/template.yaml
@@ -19,7 +19,7 @@ PublicAccessBlockConfiguration:
         Version: '2012-10-17'
         Statement:
          - Sid: 'PublicReadGetObject'
-         - Effect: 'Allow'
-          Principal: '*'
-          Action: 's3:GetObject'
-          Resource: !Sub 'arn:aws:s3::${cloudpipe-website-kk}/*'
+            Effect: 'Allow'
+            Principal: '*'
+            Action: 's3:GetObject'
+            Resource: !Sub 'arn:aws:s3:::${cloudpipe-website-kk}/*'
