--- a/website/.github/workflows/deploy.yaml
+++ b/website/.github/workflows/deploy.yaml
@@ -17,11 +17,11 @@ jobs:
           aws-region: us-east-1
 
       - name: Upload to S3
-        run: aws s3 sync website/ s3://cloudpipe-website/ --delete
+        run: aws s3 sync website/ s3://cloudpipe-website-kk/ --delete
 
       - name: Notify completion 
         run: echo "Deployment Compelete!"
 
       - name: Notify on failure
         if: failure()
-        run: echo "Deployment Failed!"
+        run: echo "Deployment Failed!"  
