--- a/website/.github/workflows/infrastructure/template.yaml
+++ b/website/.github/workflows/infrastructure/template.yaml
@@ -18,8 +18,7 @@ PublicAccessBlockConfiguration:
       PolicyDocument:
         Version: '2012-10-17'
         Statement:
-         - Sid: 'PublicReadGetObject'
-            Effect: 'Allow'
+         - Effect: 'Allow'
             Principal: '*'
             Action: 's3:GetObject'
             Resource: !Sub 'arn:aws:s3:::${cloudpipe-website-kk}/*'
