--- a/website/.github/workflows/infrastructure/template.yaml
+++ b/website/.github/workflows/infrastructure/template.yaml
@@ -19,6 +19,7 @@ PublicAccessBlockConfiguration:
         Version: '2012-10-17'
         Statement:
          - Effect: 'Allow'
-            Principal: "*"
+            Principal:
+              AWS: "*"
             Action: 's3:GetObject'
             Resource: !Sub 'arn:aws:s3:::${cloudpipe-website-kk}/*'
