--- a/website/.github/workflows/deploy.yaml
+++ b/website/.github/workflows/deploy.yaml
@@ -17,7 +17,7 @@ jobs:
           aws-region: us-east-1
 
       - name: Upload to S3
-        run: aws s3 sync website/ s3://cloudpipe-website-kk/ --delete
+        run: aws s3 sync website/ s3://cloudpipe-website-kk-123/ --delete
 
       - name: Notify completion 
         run: echo "Deployment Compelete!"
